--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-📌 Recommended Environment
+# Core dependencies
+streamlit
+pandas
+numpy
+scikit-learn
+matplotlib
+seaborn
 
-Python 3.8+
-Jupyter Notebook / Google Colab for development
-Streamlit for interactive deployment
+# Jupyter Notebook (optional, if needed)
+notebook
+
+
